--- a/static/styles.css
+++ b/static/styles.css
@@ -2,7 +2,7 @@ body {
     background-image: url("bg.jpg");
     background-size: cover;
     width: 80%;
-    font-family: 'Times New Roman', Times, serif;
+    font-family: 'Ubuntu', sans-serif;
     text-align: center;
     margin: 0 auto;
     padding: 0;
