--- a/templates/fcfs.html
+++ b/templates/fcfs.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap">
     <title>FCFS Algorithm</title>
     <link rel="shortcut icon" href="{{ url_for('static', filename='fav.png' ) }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='other_style.css') }}">
