--- a/templates/priority_scheduling.html
+++ b/templates/priority_scheduling.html
@@ -19,7 +19,7 @@
         <label for="burst-time">Burst Time:&nbsp;</label>
         <input type="text" id="burst-time" name="burst-time" placeholder="Enter burst time">
         <label for="priority">Priority:&nbsp;</label>
-        <input type="text" id="priority" name="priority" placeholder="Enter priorities">
+        <input type="text" id="priority" name="priority" placeholder="Default FCFS method">
     </div>
 
     <button id="run-algo">Run Algorithm</button>
@@ -29,6 +29,8 @@
             <img src="{{ url_for('static', filename='file.png') }}" alt="Download Result"
                 style="width: 30px; height: 30px; cursor: pointer;">
         </a>
+        <a href="{{ url_for('compare')}}" class="send-compare" id="send_compare"
+            style="display: none; position: absolute; bottom: 10px; right: 10px;"><button>Compare Results</button></a>
         <div id="result"></div>
     </div>
 
@@ -59,9 +61,32 @@
                     downloadLink.href = url;
                     downloadLink.download = 'priority_scheduling_result.txt';
                     downloadLink.style.display = 'flex';
+                    send_compare.style.display = 'flex';
                 })
                 .catch(error => console.error('Error:', error));
         });
+        document.getElementById('send_compare').addEventListener('click', function () {
+            const arrivalTimes = document.getElementById('arrival-time').value;
+            const burstTimes = document.getElementById('burst-time').value;
+            const priority = document.getElementById('priority').value;
+
+            fetch('/compare', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/x-www-form-urlencoded'
+                },
+                body: `arrival-time=${encodeURIComponent(arrivalTimes)}&burst-time=${encodeURIComponent(burstTimes)}&priority=${encodeURIComponent(priority)}`
+            })
+                .then(response => {
+                    if (response.ok) {
+                        window.location.href = "/compare";
+                    } else {
+                        console.error("Failed to send data to compare page.");
+                    }
+                }).catch(error => console.error('Error:', error));
+        });
+
+
     </script>
     <footer>&copy; KAUS4R</footer>
 </body>
