--- a/templates/round_robin.html
+++ b/templates/round_robin.html
@@ -20,7 +20,7 @@
         <label for="burst-time">Burst Time:&nbsp;</label>
         <input type="text" id="burst-time" name="burst-time" placeholder="Enter burst time">
         <label for="time-quantam">Time Quantum:</label>
-        <input type="text" id="time-quantam" name="time-quantam" placeholder="Enter time quantum">
+        <input type="text" id="time-quantam" name="time-quantam" placeholder="Default 2s">
     </div>
 
     <button id="run-algo">Run Algorithm</button>
@@ -30,6 +30,8 @@
             <img src="{{ url_for('static', filename='file.png') }}" alt="Download Result"
                 style="width: 30px; height: 30px; cursor: pointer;">
         </a>
+        <a href="{{ url_for('compare')}}" class="send-compare" id="send_compare"
+            style="display: none; position: absolute; bottom: 10px; right: 10px;"><button>Compare Results</button></a>
         <div id="result"></div>
     </div>
 
@@ -60,21 +62,28 @@
                     downloadLink.href = url;
                     downloadLink.download = 'round_robin_result.txt';
                     downloadLink.style.display = 'flex';
+                    send_compare.style.display = 'flex';
                 })
         });
+        document.getElementById('send_compare').addEventListener('click', function () {
+            const arrivalTimes = document.getElementById('arrival-time').value;
+            const burstTimes = document.getElementById('burst-time').value;
+            const timeQuantam = document.getElementById('time-quantam').value;
 
-
-        document.getElementById('download-btn').addEventListener('click', function () {
-            const resultText = document.getElementById('result').innerText;
-            const blob = new Blob([resultText], { type: 'text/plain' });
-            const url = URL.createObjectURL(blob);
-            const a = document.createElement('a');
-            a.href = url;
-            a.download = 'round_robin_result.txt';
-            document.body.appendChild(a);
-            a.click();
-            document.body.removeChild(a);
-            URL.revokeObjectURL(url);
+            fetch('/compare', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/x-www-form-urlencoded'
+                },
+                body: `arrival-time=${arrivalTimes}&burst-time=${burstTimes}&time-quantam=${timeQuantam}`
+            })
+                .then(response => {
+                    if (response.ok) {
+                        window.location.href = "/compare";
+                    } else {
+                        console.error("Failed to send data to compare page.");
+                    }
+                }).catch(error => console.error('Error:', error));
         });
 
     </script>
