--- a/templates/sjf_preemptive.html
+++ b/templates/sjf_preemptive.html
@@ -28,6 +28,9 @@
             <img src="{{ url_for('static', filename='file.png') }}" alt="Download Result"
                 style="width: 30px; height: 30px; cursor: pointer;">
         </a>
+        <a href="{{ url_for('compare')}}" class="send-compare" id="send_compare"
+            style="display: none; position: absolute; bottom: 10px; right: 10px;"><button>Compare Results</button>
+        </a>
         <div id="result"></div>
     </div>
 
@@ -57,9 +60,31 @@
                     downloadLink.href = url;
                     downloadLink.download = 'sjf_preemptive_result.txt';
                     downloadLink.style.display = 'flex';
+                    send_compare.style.display = 'flex';
                 })
                 .catch(error => console.error('Error:', error));
         });
+
+        document.getElementById('send_compare').addEventListener('click', function () {
+            const arrivalTimes = document.getElementById('arrival-time').value;
+            const burstTimes = document.getElementById('burst-time').value;
+
+            fetch('/compare', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/x-www-form-urlencoded'
+                },
+                body: `arrival-time=${encodeURIComponent(arrivalTimes)}&burst-time=${encodeURIComponent(burstTimes)}`
+            })
+                .then(response => {
+                    if (response.ok) {
+                        window.location.href = "/compare";
+                    } else {
+                        console.error("Failed to send data to compare page.");
+                    }
+                }).catch(error => console.error('Error:', error));
+        });
+
     </script>
     <footer>&copy; KAUS4R</footer>
 </body>
