--- a/templates/compare.html
+++ b/templates/compare.html
@@ -46,7 +46,7 @@
             <h2>Round Robin</h2>
             <div id="rr-wt" class="result-box">Avg. Wt time: --</div>
             <div id="rr-tat" class="result-box">Avg. TAT time: --</div>
-            <input type="text" id="time-quantam" name="time-quantam" placeholder="Enter timequanta (default 2s)">
+            <input type="text" id="time-quantum" name="time-quantum" placeholder="Enter time quanta (default 2s)">
             <br>
             <button onclick="runAlgorithm('rr')">CHECK</button>
         </div>
