--- a/templates/round_robin.html
+++ b/templates/round_robin.html
@@ -19,8 +19,8 @@
         <input type="text" id="arrival-time" name="arrival-time" placeholder="Enter arrival time">
         <label for="burst-time">Burst Time:&nbsp;</label>
         <input type="text" id="burst-time" name="burst-time" placeholder="Enter burst time">
-        <label for="time-quantam">Time Quantum:</label>
-        <input type="text" id="time-quantam" name="time-quantam" placeholder="Default 2s">
+        <label for="time-quantum">Time Quantum:</label>
+        <input type="text" id="time-quantum" name="time-quantum" placeholder="Default 2s">
     </div>
 
     <button id="run-algo">Run Algorithm</button>
