--- a/static/compare_style.css
+++ b/static/compare_style.css
@@ -7,15 +7,36 @@ body {
 }
 
 h1 {
-    font-size: 2em;
+    font-size: 300%;
     margin-bottom: 20px;
+}
+
+.arrival-burst-banner {
+    display: flex;
+    justify-content: center;
+    margin-top: 60px;
+    margin-bottom: 10px;
+}
+
+.banner-box {
+    width: 80%;
+    padding: 10px;
+    margin: 10px 30px;
+    border: 2px solid #141619;
+    border-radius: 5px;
+    background-color: transparent;
+    width: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-sizing: border-box;
 }
 
 .algorithm-container {
     display: flex;
     justify-content: space-around;
     margin-bottom: 20px;
-    margin-top: 40px;
+    margin-top: 20px;
 }
 
 .algorithm {
@@ -25,12 +46,11 @@ h1 {
 .result-box {
     width: 80%;
     padding: 10px;
-    margin: 40px 0;
+    margin: 30px 0;
     border: 2px solid #141619;
     border-radius: 5px;
     background-color: transparent;
     width: 200px;
-    /* Set a fixed height */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -62,7 +82,6 @@ button {
     color: whitesmoke;
     cursor: pointer;
     margin-top: 10px;
-    /* margin-bottom: 2.5%; */
     border: 2px solid transparent;
     transition: all 0.2s ease-in-out;
 }
@@ -84,6 +103,10 @@ button:hover {
 
 .algorithm button:hover {
     background-color: #555;
+}
+
+.back_to_main {
+    margin-top: 20px;
 }
 
 footer {
