--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,15 @@
         <a href="{{ url_for('round_robin') }}" class="button">Round Robin</a>
     </div>
 
-    <footer>&copy; KAUS4R</footer>
+    <footer>
+        &copy; KAUS4R&nbsp; &nbsp;| &nbsp;
+        <a href="https://github.com/kausaraahmed/ScheduLumos" class="socio-link" target="_blank">
+            <img src="{{ url_for('static', filename='github.png')}} " width="20px"></a>
+        &nbsp;
+        <a href="https://www.linkedin.com/in/kausaraahmed/" class="socio-link" target="_blank">
+            <img src="{{ url_for('static', filename='linkedin.png')}} " width="20px"></a>
+    </footer>
+
 </body>
 
 </html>
