--- a/templates/round_robin.html
+++ b/templates/round_robin.html
@@ -41,7 +41,15 @@
 
     <script src="{{ url_for('static', filename='round_robin.js') }}"></script>
 
-    <footer>&copy; KAUS4R</footer>
+    <footer>
+        &copy; KAUS4R&nbsp; &nbsp;| &nbsp;
+        <a href="https://github.com/kausaraahmed/ScheduLumos" class="socio-link" target="_blank">
+            <img src="{{ url_for('static', filename='github.png')}} " width="17px"></a>
+        &nbsp;
+        <a href="https://www.linkedin.com/in/kausaraahmed/" class="socio-link" target="_blank">
+            <img src="{{ url_for('static', filename='linkedin.png')}} " width="17px"></a>
+    </footer>
+
 </body>
 
 </html>
