python scripts seperated into new folder

--- a/templates/compare.html
+++ b/templates/compare.html
@@ -11,60 +11,62 @@
 
 
 <body>
-    <h1>Compare Algorithms</h1>
+<h1>Compare Algorithms</h1>
 
-    <div class="arrival-burst-banner">
-        <div id="banner-at" data-at="{{ at }}" class=" banner-box">Arrival Times: {{at}}</div>
-        <div id="banner-bt" data-bt="{{ bt }}" class=" banner-box">Burst Times: {{bt}}</div>
+<div class="arrival-burst-banner">
+    <div id="banner-at" data-at="{{ at }}" class=" banner-box">Arrival Times: {{ at }}</div>
+    <div id="banner-bt" data-bt="{{ bt }}" class=" banner-box">Burst Times: {{ bt }}</div>
+</div>
+
+<div class="algorithm-container">
+    <div class="algorithm">
+        <h2>FCFS</h2>
+        <div id="fcfs-wt" class="result-box">Avg. Wt time: --</div>
+        <div id="fcfs-tat" class="result-box">Avg. TAT time: --</div>
+        <button onclick="runAlgorithm('fcfs')">CHECK</button>
     </div>
-
-    <div class="algorithm-container">
-        <div class="algorithm">
-            <h2>FCFS</h2>
-            <div id="fcfs-wt" class="result-box">Avg. Wt time: --</div>
-            <div id="fcfs-tat" class="result-box">Avg. TAT time: --</div>
-            <button onclick="runAlgorithm('fcfs')">CHECK</button>
-        </div>
-        <div class="algorithm">
-            <h2>SJF Non Preemptive</h2>
-            <div id="sjfnp-wt" class="result-box">Avg. Wt time: --</div>
-            <div id="sjfnp-tat" class="result-box">Avg. TAT time: --</div>
-            <button onclick="runAlgorithm('sjfnp')">CHECK</button>
-        </div>
-        <div class="algorithm">
-            <h2>SJF Preemptive</h2>
-            <div id="sjfp-wt" class="result-box">Avg. Wt time: --</div>
-            <div id="sjfp-tat" class="result-box">Avg. TAT time: --</div>
-            <button onclick="runAlgorithm('sjfp')">CHECK</button>
-        </div>
-        <div class="algorithm">
-            <h2>Priority Scheduling</h2>
-            <div id="priority-wt" class="result-box">Avg. Wt time: --</div>
-            <div id="priority-tat" class="result-box">Avg. TAT time: --</div>
-            <input type="text" id="priority" name="priority" placeholder="Enter Priority (default FCFS)">
-            <br>
-            <button onclick="runAlgorithm('priority')">CHECK</button>
-        </div>
-        <div class="algorithm">
-            <h2>Round Robin</h2>
-            <div id="rr-wt" class="result-box">Avg. Wt time: --</div>
-            <div id="rr-tat" class="result-box">Avg. TAT time: --</div>
-            <input type="text" id="time-quantum" name="time-quantum" placeholder="Enter time quanta (default 2s)">
-            <br>
-            <button onclick="runAlgorithm('rr')">CHECK</button>
-        </div>
+    <div class="algorithm">
+        <h2>SJF Non Preemptive</h2>
+        <div id="sjfnp-wt" class="result-box">Avg. Wt time: --</div>
+        <div id="sjfnp-tat" class="result-box">Avg. TAT time: --</div>
+        <button onclick="runAlgorithm('sjfnp')">CHECK</button>
     </div>
+    <div class="algorithm">
+        <h2>SJF Preemptive</h2>
+        <div id="sjfp-wt" class="result-box">Avg. Wt time: --</div>
+        <div id="sjfp-tat" class="result-box">Avg. TAT time: --</div>
+        <button onclick="runAlgorithm('sjfp')">CHECK</button>
+    </div>
+    <div class="algorithm">
+        <h2>Priority Scheduling</h2>
+        <div id="priority-wt" class="result-box">Avg. Wt time: --</div>
+        <div id="priority-tat" class="result-box">Avg. TAT time: --</div>
+        <input type="text" id="priority" name="priority" placeholder="Enter Priority (default FCFS)">
+        <br>
+        <button onclick="runAlgorithm('priority')">CHECK</button>
+    </div>
+    <div class="algorithm">
+        <h2>Round Robin</h2>
+        <div id="rr-wt" class="result-box">Avg. Wt time: --</div>
+        <div id="rr-tat" class="result-box">Avg. TAT time: --</div>
+        <input type="text" id="time-quantum" name="time-quantum" placeholder="Enter time quanta (default 2s)">
+        <br>
+        <button onclick="runAlgorithm('rr')">CHECK</button>
+    </div>
+</div>
 
-    <a href="{{ url_for('index') }}" class="back_to_main"><button>Main Menu</button></a>
+<a href="{{ url_for('index') }}" class="back_to_main">
+    <button>Main Menu</button>
+</a>
 
-    <footer>
-        &copy; KAUS4R&nbsp; &nbsp;| &nbsp;
-        <a href="https://github.com/kausaraahmed/ScheduLumos" class="socio-link" target="_blank">
-            <img src="{{ url_for('static', filename='github.png')}} " width="17px"></a>
-        &nbsp;
-        <a href="https://www.linkedin.com/in/kausaraahmed/" class="socio-link" target="_blank">
-            <img src="{{ url_for('static', filename='linkedin.png')}} " width="17px"></a>
-    </footer>
+<footer>
+    &copy; KAUS4R&nbsp; &nbsp;| &nbsp;
+    <a href="https://github.com/kausaraahmed/ScheduLumos" class="socio-link" target="_blank">
+        <img src="{{ url_for('static', filename='github.png') }} " width="17px"></a>
+    &nbsp;
+    <a href="https://www.linkedin.com/in/kausaraahmed/" class="socio-link" target="_blank">
+        <img src="{{ url_for('static', filename='linkedin.png') }} " width="17px"></a>
+</footer>
 
 </body>
 
