--- a/templates/round_robin.html
+++ b/templates/round_robin.html
@@ -12,43 +12,47 @@
 
 <body>
 
-    <h1>Round Robin Algorithm</h1>
+<h1>Round Robin Algorithm</h1>
 
-    <div class="input-container">
-        <label for="arrival-time">Arrival Time:</label>
-        <input type="text" id="arrival-time" name="arrival-time" placeholder="Enter arrival time">
-        <label for="burst-time">Burst Time:&nbsp;</label>
-        <input type="text" id="burst-time" name="burst-time" placeholder="Enter burst time">
-        <label for="time-quantum">Time Quantum:</label>
-        <input type="text" id="time-quantum" name="time-quantum" placeholder="Default 2s">
-    </div>
+<div class="input-container">
+    <label for="arrival-time">Arrival Time:</label>
+    <input type="text" id="arrival-time" name="arrival-time" placeholder="Enter arrival time">
+    <label for="burst-time">Burst Time:&nbsp;</label>
+    <input type="text" id="burst-time" name="burst-time" placeholder="Enter burst time">
+    <label for="time-quantum">Time Quantum:</label>
+    <input type="text" id="time-quantum" name="time-quantum" placeholder="Default 2s">
+</div>
 
-    <button id="run-algo">Run Algorithm</button>
+<button id="run-algo">Run Algorithm</button>
 
-    <div id="result-container" style="position: relative">
-        <a id="download-link" href="#" style="display: none; position: absolute; top: 10px; right: 10px;">
-            <img src="{{ url_for('static', filename='file.png') }}" alt="Download Result"
-                style="width: 30px; height: 30px; cursor: pointer;">
-        </a>
-        <a href="{{ url_for('compare')}}" class="send-compare" id="send_compare"
-            style="display: none; position: absolute; bottom: 10px; right: 10px;"><button>Compare Results</button></a>
-        <div id="result"></div>
-    </div>
+<div id="result-container" style="position: relative">
+    <a id="download-link" href="#" style="display: none; position: absolute; top: 10px; right: 10px;">
+        <img src="{{ url_for('static', filename='file.png') }}" alt="Download Result"
+             style="width: 30px; height: 30px; cursor: pointer;">
+    </a>
+    <a href="{{ url_for('compare') }}" class="send-compare" id="send_compare"
+       style="display: none; position: absolute; bottom: 10px; right: 10px;">
+        <button>Compare Results</button>
+    </a>
+    <div id="result"></div>
+</div>
 
-    <br>
+<br>
 
-    <a href="{{ url_for('index')}}" class="back_to_main"><button>Main Menu</button></a>
+<a href="{{ url_for('index') }}" class="back_to_main">
+    <button>Main Menu</button>
+</a>
 
-    <script src="{{ url_for('static', filename='round_robin.js') }}"></script>
+<script src="{{ url_for('static', filename='round_robin.js') }}"></script>
 
-    <footer>
-        &copy; KAUS4R&nbsp; &nbsp;| &nbsp;
-        <a href="https://github.com/kausaraahmed/ScheduLumos" class="socio-link" target="_blank">
-            <img src="{{ url_for('static', filename='github.png')}} " width="17px"></a>
-        &nbsp;
-        <a href="https://www.linkedin.com/in/kausaraahmed/" class="socio-link" target="_blank">
-            <img src="{{ url_for('static', filename='linkedin.png')}} " width="17px"></a>
-    </footer>
+<footer>
+    &copy; KAUS4R&nbsp; &nbsp;| &nbsp;
+    <a href="https://github.com/kausaraahmed/ScheduLumos" class="socio-link" target="_blank">
+        <img src="{{ url_for('static', filename='github.png') }} " width="17px"></a>
+    &nbsp;
+    <a href="https://www.linkedin.com/in/kausaraahmed/" class="socio-link" target="_blank">
+        <img src="{{ url_for('static', filename='linkedin.png') }} " width="17px"></a>
+</footer>
 
 </body>
 
