updated code structure - 3

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <title>ScheduLumos</title>
-    <link rel="shortcut icon" href="{{ url_for('static', filename='fav.png' ) }}">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='images/fav.png' ) }}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css' ) }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css' ) }}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap">
 </head>
 
@@ -24,10 +24,10 @@
 <footer>
     &copy; KAUS4R&nbsp; &nbsp;| &nbsp;
     <a href="https://github.com/kausaraahmed/ScheduLumos" class="socio-link" target="_blank">
-        <img src="{{ url_for('static', filename='github.png') }} " width="20px"></a>
+        <img src="{{ url_for('static', filename='images/github.png') }} " width="20px"></a>
     &nbsp;
     <a href="https://www.linkedin.com/in/kausaraahmed/" class="socio-link" target="_blank">
-        <img src="{{ url_for('static', filename='linkedin.png') }} " width="20px"></a>
+        <img src="{{ url_for('static', filename='images/linkedin.png') }} " width="20px"></a>
 </footer>
 
 </body>
