--- a/static/css/algorithm_page_style.css
+++ b/static/css/algorithm_page_style.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Ubuntu', sans-serif;
-    background-image: url("bg.jpg");
+    background-image: url("../images/bg.jpg");
     background-size: cover;
     width: 80%;
     display: flex;
@@ -37,7 +37,6 @@ input[type="text"] {
 button {
     padding: 10px 20px;
     font-size: 16px;
-    border: none;
     border-radius: 5px;
     background-color: #141619;
     color: whitesmoke;
