--- a/static/css/compare_style.css
+++ b/static/css/compare_style.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Ubuntu', sans-serif;
-    background-image: url("bg.jpg");
+    background-image: url("../images/bg.jpg");
     background-size: cover;
     text-align: center;
     padding: 20px;
@@ -19,7 +19,6 @@ h1 {
 }
 
 .banner-box {
-    width: 80%;
     padding: 10px;
     margin: 10px 30px;
     border: 2px solid #141619;
@@ -44,7 +43,6 @@ h1 {
 }
 
 .result-box {
-    width: 80%;
     padding: 10px;
     margin: 30px 0;
     border: 2px solid #141619;
@@ -58,7 +56,6 @@ h1 {
 }
 
 input[type="text"] {
-    width: 80%;
     padding: 10px;
     border: 2px solid #141619;
     border-radius: 5px;
@@ -75,7 +72,6 @@ input[type="text"] {
 button {
     padding: 10px 20px;
     font-size: 16px;
-    border: none;
     border-radius: 5px;
     background-color: #141619;
     color: whitesmoke;
