--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("bg.jpg");
+    background-image: url("../images/bg.jpg");
     background-size: cover;
     width: 80%;
     font-family: 'Ubuntu', sans-serif;
