automatically show results on compare page

--- a/templates/compare.html
+++ b/templates/compare.html
@@ -22,20 +22,17 @@
         <div class="algorithm">
             <h2>FCFS</h2>
             <div id="fcfs-wt" class="result-box">Avg. Wt time: --</div>
-            <div id="fcfs-tat" class="result-box">Avg. TAT time: --</div>
-            <button onclick="runAlgorithm('fcfs')">CHECK</button>
+            <div id="fcfs-tat" data-tta="{{ tta }}" class="result-box">Avg. TAT time: --</div>
         </div>
         <div class="algorithm">
             <h2>SJF Non Preemptive</h2>
             <div id="sjfnp-wt" class="result-box">Avg. Wt time: --</div>
             <div id="sjfnp-tat" class="result-box">Avg. TAT time: --</div>
-            <button onclick="runAlgorithm('sjfnp')">CHECK</button>
         </div>
         <div class="algorithm">
             <h2>SJF Preemptive</h2>
             <div id="sjfp-wt" class="result-box">Avg. Wt time: --</div>
             <div id="sjfp-tat" class="result-box">Avg. TAT time: --</div>
-            <button onclick="runAlgorithm('sjfp')">CHECK</button>
         </div>
         <div class="algorithm">
             <h2>Priority Scheduling</h2>
