--- a/static/css/algorithm_page_style.css
+++ b/static/css/algorithm_page_style.css
@@ -3,12 +3,18 @@ body {
     background-image: url("../images/bg.jpg");
     background-size: cover;
     width: 80%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
     margin: 0 auto;
+}
+
+.main-container {
+    display: flex;
+    /* min-height: 90vh; */
+    height: 100vh;
+    width: 80vw;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    justify-content: space-between;
 }
 
 a {
@@ -16,70 +22,70 @@ a {
 }
 
 h1 {
-    font-size: 300%;
-    margin-bottom: 5%;
+    font-size: 3.5vw;
+    margin-bottom: 3%;
     font-weight: bold;
 }
 
 .input-container {
-    margin-bottom: 17px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    font-size: 1.2vw;
 }
 
 input[type="text"] {
-    padding: 10px;
-    font-size: 16px;
+    padding: 0.6vw;
+    font-size: 1.1vw;
     margin-right: 2vw;
-    border: 1px solid #2d2d2d;
+    border: 2px solid #101010;
     border-radius: 5px;
     background-color: transparent;
 }
 
 button {
-    padding: 10px 20px;
-    font-size: 16px;
+    padding: 0.6vw 1.5vw;
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 1.3vw;
     border-radius: 5px;
     background-color: #141619;
     color: whitesmoke;
     cursor: pointer;
-    margin-top: 2%;
-    margin-bottom: 2.5%;
-    border: 2px solid transparent;
-    transition: all 0.2s ease-in-out;
+    margin: 2vw;
+    border: 0.2vw solid transparent;
+    transition: all 0.4s ease-in-out;
 }
 
 button:hover {
-    border-color: #ED7847;
-    border-width: 2px;
-}
-
-#result {
-    font-size: 14px;
-    padding-left: 20px;
-    padding-top: 13px;
-    width: 100%;
-    background-color: transparent;
-    min-height: 30vh;
+    border-color: rebeccapurple;
 }
 
 #result-container {
-    margin-top: 2.5%;
-    width: 100%;
-    max-width: 70%;
-    border: 1px solid #2d2d2d;
-    border-radius: 5px;
+    width: 75%;
+    min-height: 35vh;
+    position: relative;
+    border: 2px solid #2d2d2d;
+    border-radius: 0.5vw;
     background-color: transparent;
-    min-height: 30vh;
 }
 
 .download-btn {
     background-color: transparent;
     border: none;
     padding: 0;
-    cursor: pointer;
+}
+
+#result {
+    width: 100%;
+    height: fit-content;
+    overflow: auto;
+    font-size: 1vw;
+    background-color: transparent;
 }
 
 footer {
-    position: absolute;
     bottom: 0;
     width: 80%;
     text-align: center;
@@ -109,97 +115,52 @@ footer {
 
 @media screen and (max-width: 767px) {
     body {
-        background-size: auto;
-        height: auto;
-        background-color: #ED7847;
-        overflow: visible;
-        width: 100%;
-        margin: 0 auto;
+        width: 90%;
     }
 
-    a {
-        text-decoration: none;
+    .main-container {
+        width: 90vw;
     }
 
     h1 {
         font-size: 10vw;
-        margin-bottom: 10%;
-        font-weight: bold;
+        margin-bottom: 0;
     }
 
     .input-container {
         display: flex;
         flex-direction: column;
-        align-items: center;
         font-size: 4vw;
     }
 
-    #arrival-time {
-        margin-bottom: 5vw;
+    input[type="text"] {
+        padding: 1.5vw;
+        font-size: 4vw;
+        margin-right: 2vw;
+        margin-top: 1.5vw;
     }
 
-    input[type="text"] {
-        padding: 2vw;
-        margin: 1.5vw;
-        border: 2px solid #2d2d2d;
+    label {
+        margin-top: 5vw;
     }
 
     button {
-        padding: 2vw 5vw;
-        margin-bottom: 3vw;
+        padding: 1vw 3.5vw;
+        font-size: 4vw;
+        margin: 0;
     }
 
     #result-container {
-        width: fit-content;
-        min-width: 80%;
-        overflow: hidden;
-        border: 1.5px solid #101010;
+        width: 100%;
+        border: 2px solid #2d2d2d;
         border-radius: 5px;
         background-color: transparent;
+        min-height: 30vh;
     }
 
-    #result {
-        overflow: scroll;
+    #send_compare {
+        margin-bottom: 2vw;
+        margin-right: 2vw;
     }
 
-    #send-compare {
-        position: absolute;
-        bottom: 0;
-        right: 2vw;
-    }
-
-    .download-btn {
-        background-color: transparent;
-        border: none;
-        padding: 0;
-        cursor: pointer;
-    }
-
-    footer {
-        position: absolute;
-        bottom: 0;
-        width: 80%;
-        text-align: center;
-        padding: 10px;
-        margin: 0 auto;
-        font-size: 14px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .socio-link {
-        margin: 0 5px;
-        right: 0;
-        bottom: 2px;
-        transition: all 0.1s ease-in-out;
-    }
-
-    .socio-link a {
-        margin-left: 5px;
-    }
-
-    .socio-link:hover {
-        scale: 1.1;
-    }
 }
