--- a/templates/sjf_preemptive.html
+++ b/templates/sjf_preemptive.html
@@ -11,46 +11,48 @@
 </head>
 
 <body>
+    <div class="main-container">
+        <h1>SJF Preemptive Algorithm</h1>
 
-<h1>SJF Preemptive Algorithm</h1>
+        <div class="input-container">
+            <label for="arrival-time">Arrival Time (space-separated): &nbsp;</label>
+            <input type="text" id="arrival-time" name="arrival-time" placeholder="Enter arrival time">
+            <label for="burst-time">Burst Time (space-separated): &nbsp;</label>
+            <input type="text" id="burst-time" name="burst-time" placeholder="Enter burst time">
+        </div>
 
-<div class="input-container">
-    <label for="arrival-time">Arrival Time (space-separated): </label>
-    <input type="text" id="arrival-time" name="arrival-time" placeholder="Enter arrival time">
-    <label for="burst-time">Burst Time (space-separated): </label>
-    <input type="text" id="burst-time" name="burst-time" placeholder="Enter burst time">
-</div>
+        <button id="run-algo">Run Algorithm</button>
 
-<button id="run-algo">Run Algorithm</button>
+        <div id="result-container">
 
-<div id="result-container" style="position: relative">
-    <a id="download-link" href="#" style="display: none; position: absolute; top: 10px; right: 10px;">
-        <img src="{{ url_for('static', filename='images/file.png') }}" alt="Download Result"
-             style="width: 30px; height: 30px; cursor: pointer;">
-    </a>
-    <a href="{{ url_for('compare') }}" class="send-compare" id="send_compare"
-       style="display: none; position: absolute; bottom: 10px; right: 10px;">
-        <button>Compare Results</button>
-    </a>
-    <div id="result"></div>
-</div>
+            <a id="download-link" href="#" style="display: none; position: absolute; bottom: 0; right: 0;">
+                <img src="{{ url_for('static', filename='images/file.png') }}" alt="Download Result"
+                    style="width: 30px; height: 30px; cursor: pointer;">
+            </a>
 
-<br>
+            <div id="result"></div>
 
-<a href="{{ url_for('index') }}" class="back_to_main">
-    <button>Main Menu</button>
-</a>
+            <a href="{{ url_for('compare') }}" class="send-compare" id="send_compare"
+                style="display: flex; position: absolute; bottom: 0; right: 0;">
+                <button>Compare Results</button>
+            </a>
+        </div>
 
-<script src="{{ url_for('static', filename='js/sjf_preemptive.js') }}"></script>
+        <a href="{{ url_for('index') }}" class="back_to_main">
+            <button>Main Menu</button>
+        </a>
 
-<footer>
-    &copy; KAUS4R&nbsp; &nbsp;| &nbsp;
-    <a href="https://github.com/kausaraahmed/ScheduLumos" class="socio-link" target="_blank">
-        <img src="{{ url_for('static', filename='images/github.png') }} " width="17px" alt="GitHub"></a>
-    &nbsp;
-    <a href="https://www.linkedin.com/in/kausaraahmed/" class="socio-link" target="_blank">
-        <img src="{{ url_for('static', filename='images/linkedin.png') }} " width="17px" alt="LinkedIn"></a>
-</footer>
+        <footer>
+            &copy; KAUS4R&nbsp; &nbsp;| &nbsp;
+            <a href="https://github.com/kausaraahmed/ScheduLumos" class="socio-link" target="_blank">
+                <img src="{{ url_for('static', filename='images/github.png') }} " width="17px" alt="GitHub"></a>
+            &nbsp;
+            <a href="https://www.linkedin.com/in/kausaraahmed/" class="socio-link" target="_blank">
+                <img src="{{ url_for('static', filename='images/linkedin.png') }} " width="17px" alt="LinkedIn"></a>
+        </footer>
+    </div>
+
+    <script src="{{ url_for('static', filename='js/sjf_preemptive.js') }}"></script>
 
 </body>
 
