--- a/templates/fcfs.html
+++ b/templates/fcfs.html
@@ -15,9 +15,9 @@
         <h1>FCFS Algorithm</h1>
 
         <div class="input-container">
-            <label for="arrival-time">Arrival Time (space-separated): </label>
+            <label for="arrival-time">Arrival Time (space-separated): &nbsp;</label>
             <input type="text" id="arrival-time" name="arrival-time" placeholder="Enter arrival time">
-            <label for="burst-time">Burst Time (space-separated): </label>
+            <label for="burst-time">Burst Time (space-separated): &nbsp;</label>
             <input type="text" id="burst-time" name="burst-time" placeholder="Enter burst time">
         </div>
 
