--- a/static/css/compare_style.css
+++ b/static/css/compare_style.css
@@ -2,120 +2,124 @@ body {
     font-family: 'Ubuntu', sans-serif;
     background-image: url("../images/bg.jpg");
     background-size: cover;
+    width: 90%;
+    margin: 0 auto;
+}
+
+.main-container {
+    display: flex;
+    height: 100vh;
+    width: 90vw;
+    flex-direction: column;
     text-align: center;
-    padding: 20px;
+    align-items: center;
+    justify-content: space-between;
+}
+
+a {
+    text-decoration: none;
 }
 
 h1 {
-    font-size: 300%;
-    margin-bottom: 20px;
+    font-size: 3.5vw;
+    margin-bottom: 2vw;
+    font-weight: bold;
 }
 
-.arrival-burst-banner {
+.at-bt {
+    width: 70%;
+    margin: 1% 0;
     display: flex;
-    justify-content: center;
-    margin-top: 60px;
-    margin-bottom: 10px;
+    justify-content: space-evenly;
 }
 
 .banner-box {
-    padding: 10px;
-    margin: 10px 30px;
-    border: 2px solid #141619;
-    border-radius: 5px;
-    background-color: transparent;
-    width: 200px;
     display: flex;
+    width: fit-content;
+    min-width: 15vw;
+    padding: 10px;
     align-items: center;
     justify-content: center;
     box-sizing: border-box;
+    background-color: transparent;
+    border: 2px solid #141619;
+    border-radius: 5px;
 }
 
 .algorithm-container {
     display: flex;
-    justify-content: space-around;
-    margin-bottom: 20px;
-    margin-top: 20px;
+    width: 100%;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
 }
 
 .algorithm {
+    display: flex;
+    flex-direction: column;
+    padding: 1vw;
+    margin: 0 3vw;
+    margin-top: 3vw;
+    width: 20%;
+    height: fit-content;
+    min-height: 18vw;
     text-align: center;
+    align-items: center;
+    justify-content: space-evenly;
+    border: 2px dotted #14161950;
+    background-color: #14161908;
+    border-radius: 5px;
 }
 
 .result-box {
+    width: fit-content;
+    /* box-sizing: border-box; */
+    min-width: 13vw;
+    margin: 6% 0;
     padding: 10px;
-    margin: 30px 0;
+    background-color: transparent;
     border: 2px solid #141619;
     border-radius: 5px;
-    background-color: transparent;
-    width: 200px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    box-sizing: border-box;
 }
 
 input[type="text"] {
+    width: fit-content;
+    /* box-sizing: border-box; */
+    min-width: 13vw;
+    margin: 6% 0;
     padding: 10px;
+    background-color: transparent;
     border: 2px solid #141619;
     border-radius: 5px;
-    background-color: transparent;
-    width: 200px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    box-sizing: border-box;
-    font-size: 13px;
-    font-family: 'Ubuntu' sans-serif;
 }
 
 button {
-    padding: 10px 20px;
-    font-size: 16px;
+    padding: 0.6vw 1.5vw;
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 1vw;
     border-radius: 5px;
     background-color: #141619;
     color: whitesmoke;
+    border: 0.2vw solid transparent;
+    transition: all 0.4s ease-in-out;
     cursor: pointer;
-    margin-top: 10px;
-    border: 2px solid transparent;
-    transition: all 0.2s ease-in-out;
 }
 
 button:hover {
     border-color: #ED7847;
-    border-width: 2px;
 }
 
-.algorithm button {
-    padding: 10px 20px;
-    background-color: #141619;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-weight: bold;
-}
-
-.algorithm button:hover {
-    background-color: #555;
-}
 
 .back_to_main {
-    margin-top: 20px;
+    margin: 2vw 0;
 }
 
 footer {
-    position: absolute;
     bottom: 0;
-    width: 95%;
     text-align: center;
     padding: 10px;
     margin: 0 auto;
     font-family: 'Ubuntu', sans-serif;
     font-size: 14px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 .socio-link {
@@ -131,4 +135,61 @@ footer {
 
 .socio-link:hover {
     scale: 1.1;
+}
+
+@media screen and (max-width: 767px) {
+    h1 {
+        font-size: 8vw;
+        margin-bottom: 5vw;
+    }
+
+    .at-bt {
+        display: flex;
+        flex-direction: column;
+        width: 80%;
+        align-items: center;
+    }
+
+    .banner-box {
+        display: flex;
+        width: fit-content;
+        min-width: 80%;
+        padding: 10px;
+        margin: 5vw 0;
+    }
+
+    .algorithm-container {
+        display: flex;
+        width: 100%;
+        justify-content: space-evenly;
+        flex-wrap: wrap;
+    }
+
+    .algorithm {
+        flex-direction: column;
+        margin: 0 5vw;
+        margin-top: 8vw;
+        width: 80%;
+        min-height: 18vw;
+        background-color: #14161905;
+    }
+
+    .result-box {
+        min-width: 60%;
+    }
+
+    input[type="text"] {
+        min-width: 60%;
+        margin-bottom: 0;
+    }
+
+    button {
+        padding: 1vw 3.5vw;
+        font-size: 3.5vw;
+        margin-bottom: 3vw;
+    }
+
+    .back_to_main {
+        margin: 10vw 0;
+    }
 }
